[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10.0"
serde = "1.0"
serde_derive = "1.0"
confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
assert_fs = "1.0.13"

[build-dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_mangen = "0.2.15"
serde = "1.0"
serde_derive = "1.0"
